Updated dependencies and files

--- a/package.json
+++ b/package.json
@@ -1,19 +1,27 @@
 {
-  "name": "morpheus",
-  "version": "1.0.0",
-  "description": "Pomodoro clock project.",
-  "keywords": [],
-  "main": "src/index.js",
+  "name": "pomodoroclock",
+  "version": "0.1.0",
   "dependencies": {
-    "react": "16.3.2",
-    "react-dom": "16.3.2",
-    "react-scripts": "1.1.4"
+    "react": "^16.8.3",
+    "react-dom": "^16.8.3",
+    "react-scripts": "2.1.5"
   },
-  "devDependencies": {},
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
+    "test": "react-scripts test",
     "eject": "react-scripts eject"
-  }
+  },
+  "eslintConfig": {
+    "extends": "react-app",
+    "rules": {
+          "no-unused-expressions": [ {"allowTernary": true, "allowShortCircuit": true}]
+    }
+  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
